# ecolit

./: .gitignore  LICENSE  Makefile  README.md  config.template.yaml  epc_constants.py  main.py  network_utils.py  pyproject.toml  scan.py
data/generated_test_data/: test_data_0825_10s.csv  test_data_0825_10s.json  test_data_0826_10s.csv  test_data_0826_10s.json  (+5 more)
docs/: README.md  architecture.md  charging-optimization.md  configuration.md  echonet-lite.md  energy-analysis.md  energy-data-analysis.md  tesla-auth.md  tesla-charging-analysis.md  tesla-integration.md  tesla-tvcp-setup.md  tesla-wall-connector.md
ecolit/: __init__.py  __main__.py  config.py  constants.py  core.py  device_state_manager.py  metrics_logger.py  realtime_soc.py
scratch_analysis/: data_patterns.py  energy_analysis.py  enhanced_soc_calculator.py  generate_test_data.py  grid_monitor.py  pyproject.toml  realtime_soc_estimator.py  scan_solar_capacity.py  soc_alternative_metrics.py  soc_monitor.py  soc_quick_scan.py  soc_realtime_scan.py  solar_grid_scan.py  tesla_analysis.py
scripts/: tesla_config_guide.py  tesla_control.py  tesla_discover.py  tesla_list.py  tesla_mint.py  tesla_refresh.py  tesla_test.py  tesla_utils.py
tests/: conftest.py  test_backtest.py  test_charging_policies.py  test_command_execution_critical.py  test_config.py  test_device_pollers.py  test_ev_charging_behavior.py  test_ev_controller.py  test_regression_prevention.py  test_tesla_api_critical.py  test_tesla_integration.py  test_tesla_polling_critical.py  test_tesla_wake_timing.py  test_tesla_wall_connector_wake.py
(+22 files in other folders)
